# ChangeLog for media-sound/mpd
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/mpd/ChangeLog,v 1.258 2011/07/17 10:18:06 xarthisius Exp $

  17 Jul 2011; Kacper Kowalik <xarthisius@gentoo.org> mpd-0.16.2.ebuild:
  ppc/ppc64 stable wrt #364469

*mpd-0.16.3-r1 (03 Jul 2011)

  03 Jul 2011; Christoph Mende <angelos@gentoo.org> +mpd-0.16.3-r1.ebuild,
  +files/mpd-0.16.3-ffmpeg.patch:
  Fix segfault with recent ffmpeg versions (bug #373423 by Mike MacDonald)

  25 Jun 2011; Christoph Mende <angelos@gentoo.org> mpd-0.15.8.ebuild,
  mpd-0.15.15.ebuild, mpd-0.15.16.ebuild, mpd-0.16.2.ebuild, mpd-0.16.3.ebuild,
  metadata.xml:
  Rename USE=id3 to id3tag (bug #372997)

*mpd-0.16.3 (05 Jun 2011)

  05 Jun 2011; Christoph Mende <angelos@gentoo.org> +mpd-0.16.3.ebuild:
  Version bump

  15 May 2011; Markus Meier <maekke@gentoo.org> mpd-0.16.2.ebuild:
  arm stable, bug #364469

  13 May 2011; Jeroen Roovers <jer@gentoo.org> mpd-0.16.2.ebuild:
  Stable for HPPA (bug #364469).

  04 May 2011; Christoph Mende <angelos@gentoo.org> mpd-0.15.8.ebuild,
  mpd-0.15.15.ebuild, mpd-0.15.16.ebuild, mpd-0.16.2.ebuild:
  Change mpich2 block to <1.4-rc2 (bug #145367)

  04 May 2011; Christoph Mende <angelos@gentoo.org> mpd-0.16.2.ebuild,
  files/mpd-0.16.conf.patch:
  Patch mpdconf.dist instead of mpdconf.example so we install upstream's
  example with the docs

  03 May 2011; Thomas Kahle <tomka@gentoo.org> mpd-0.16.2.ebuild:
  x86 stable per bug 364469

  30 Apr 2011; Christoph Mende <angelos@gentoo.org> mpd-0.16.2.ebuild:
  Bump mpg123 dep to 0.12.2 (bug 365111)

  27 Apr 2011; Christoph Mende <angelos@gentoo.org> mpd-0.16.2.ebuild:
  Stable on amd64 wrt bug #364469

  23 Apr 2011; Christoph Mende <angelos@gentoo.org> -mpd-0.16.1-r1.ebuild,
  -mpd-0.16.1-r2.ebuild:
  Removed old

  04 Apr 2011; Tomáš Chvátal <scarabeus@gentoo.org> mpd-0.15.8.ebuild,
  mpd-0.15.15.ebuild, mpd-0.15.16.ebuild, mpd-0.16.1-r1.ebuild,