@@ -1,6 +1,11 @@
 # ChangeLog for media-sound/mpd
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/mpd/ChangeLog,v 1.258 2011/07/17 10:18:06 xarthisius Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/mpd/ChangeLog,v 1.259 2011/07/17 15:37:10 angelos Exp $
+
+*mpd-9999 (17 Jul 2011)
+
+  17 Jul 2011; Christoph Mende <angelos@gentoo.org> +mpd-9999.ebuild:
+  Add live ebuild
 
   17 Jul 2011; Kacper Kowalik <xarthisius@gentoo.org> mpd-0.16.2.ebuild:
   ppc/ppc64 stable wrt #364469
